# p1---Mine-Contamination-in-BiH

./: .gitignore  CMakeLists.txt  README.md  TimAstar.c  aStar.c  aStarTest.c  createMap.c  createMapWFile.c  dataStructures.c  dataStructures.h  fromNumberToEnum.c  head.h  header  header.h  ifObstacle.c  input.c  inputForShortestRouteAndMineGen.c  isUnblocked.c  isWithinArray.c  linSearch.c  linearSearch.c  main.c  map.txt  mineGen.c  printMap.c  printMapChar.c  shortestRoute.c  stack.c  terminalOutput.c  test  test.c  tests.c
src/: CMakeLists.txt  aStar.c  aStar.h  createMap.c  dataStructures.c  dataStructures.h  dijkstra.c  fromNumberToEnum.c  grouped_100x100_matrix.txt  grouped_64x64_matrix.txt  header.h  header.h.gch  input.c  input.h  main.c  map.c  map.h  matrix.txt  mineGen.c  printMapChar.c  shortestRoute.c
test/: CMakeLists.txt  TimTestHcalc.c  TimTestMineGen.c  aStarTest.c  aStarTestJZ.c  dataStructuresTest.c  inputTest.c  mapTest.c  maptesthardcoded.c  pixel_art_map.txt  pixel_art_map_100x100.txt  test.h  testExe  testFile.c
