cmake_minimum_required(VERSION 3.29)
project(p1___Mine_Contamination_in_BiH C)

set(CMAKE_C_STANDARD 11)


add_executable(main
        aStar.c
        main.c
        aStar.c
        input.c
        aStar.h
        input.h
        map.c
        map.h
        dataStructures.c
        dataStructures.h
)